--- a/index.html
+++ b/index.html
@@ -1,1 +1,10 @@
 <!DOCTYPE html>
+<html lang="en">
+<head>
+	<meta charset="UTF-8">
+	<title>15pic-puzzle</title>
+</head>
+<body>
+	
+</body>
+</html>
