added main js files, declared classes, wrote some functions

--- a/index.html
+++ b/index.html
@@ -2,9 +2,15 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
 	<title>15pic-puzzle</title>
+	<link rel="stylesheet" href="./assets/styles/main.css">
+	<script src="./bower_components/jquery/dist/jquery.js"></script>
 </head>
 <body>
-	
+	<img src="./assets/img/p1.png" alt="puzzle" id="puzzlepic">
+	<script src="./assets/js/cell.js"></script>
+	<script src="./assets/js/picpuzzle.js"></script>
+	<script src="./assets/js/main.js"></script>
 </body>
 </html>
