--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 	<script src="./bower_components/jquery/dist/jquery.js"></script>
 </head>
 <body>
-	<img src="./assets/img/p1.png" alt="puzzle" id="samplepic">
+	<img src="./assets/img/p1.png" alt="puzzle" id="samplepic" style="display: none;">
 	<input type="file" name="file[]" id="files" multiple>
 		
 	<script src="./assets/js/cell.js"></script>
