--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
 	<img src="./assets/img/p1.png" alt="puzzle" id="samplepic" style="display: none;">
-	<input type="file" name="file[]" id="files" multiple>
+	<!-- <input type="file" name="file[]" id="files" multiple> -->
 		
 	<script src="./assets/js/cell.js"></script>
 	<script src="./assets/js/picpuzzle.js"></script>
