--- a/index.html
+++ b/index.html
@@ -8,10 +8,10 @@
 	<script src="./bower_components/jquery/dist/jquery.js"></script>
 </head>
 <body>
-	<img src="./assets/img/p1.png" alt="puzzle" id="samplepic" style="display: none;">
-	<!-- <input type="file" name="file[]" id="files" multiple> -->
+	<img src="./assets/img/p2.jpg" alt="puzzle" id="samplepic" style="display: none;">
+	<!-- <input type="file" name="file[]" id="files" multiple> 
 		
-	<script src="./assets/js/cell.js"></script>
+	<script src="./assets/js/cell.js"></script> -->
 	<script src="./assets/js/picpuzzle.js"></script>
 	<script src="./assets/js/main.js"></script>
 </body>
