--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
 </head>
 <body>
 	<img src="./assets/img/p2.jpg" alt="puzzle" id="samplepic" style="display: none;">
+	<input type="text" id="imageUrl" name="imgURL"><button id="startgame">START</button><br />
+	<input type="file" id="fromfile" name="files" accept="image/*"><br />
 	<!-- <input type="file" name="file[]" id="files" multiple> 
 		
 	<script src="./assets/js/cell.js"></script> -->
