--- a/index.html
+++ b/index.html
@@ -11,20 +11,45 @@
 </head>
 
 <body>
+    <h1 class="title">Picpuzzle</h1>
     <section id="menu">
         <img src="./assets/img/p2.jpg" alt="puzzle" id="previewpic" class="previewimage">
         <span>Select picture from collection:</span>
         <div class="collection">
-        <div class="prevPic">&lt;</div>
-        <div class="nextPic">&gt;</div>
+            <div class="prevPic"><span>&lt;</span></div>
+            <div class="collection-items-list">
+                <ul id="items">
+                    <li><img src="./assets/img/p1.jpg" alt="" class="collection-item"></li>
+                    <li><img src="./assets/img/p1.jpg" alt="" class="collection-item"></li>
+                    <li><img src="./assets/img/p1.jpg" alt="" class="collection-item"></li>
+                    <li><img src="./assets/img/p1.jpg" alt="" class="collection-item"></li>
+                    <li><img src="./assets/img/p1.jpg" alt="" class="collection-item"></li>
+                    <li><img src="./assets/img/p1.jpg" alt="" class="collection-item"></li>
+                    <li><img src="./assets/img/p1.jpg" alt="" class="collection-item"></li>
+                  
+                </ul>
+                <!-- <img src="./assets/img/p1.jpg" alt="" class="collection-item">
+                <img src="./assets/img/p1.jpg" alt="" class="collection-item">
+                <img src="./assets/img/p1.jpg" alt="" class="collection-item">
+                <img src="./assets/img/p1.jpg" alt="" class="collection-item">
+                <img src="./assets/img/p1.jpg" alt="" class="collection-item">
+                <img src="./assets/img/p1.jpg" alt="" class="collection-item">
+                <img src="./assets/img/p1.jpg" alt="" class="collection-item">
+                <img src="./assets/img/p1.jpg" alt="" class="collection-item">
+                <img src="./assets/img/p1.jpg" alt="" class="collection-item">
+                <img src="./assets/img/p1.jpg" alt="" class="collection-item">
+                <img src="./assets/img/p1.jpg" alt="" class="collection-item">
+                <img src="./assets/img/p1.jpg" alt="" class="collection-item"> -->
+            </div>
+            <div class="nextPic"><span>&gt;</span></div>
         </div>
         <div class="content">
             <div class="game_settings">
-                <span>Or get get by URL:</span>
+                <span>Or get it by URL:</span>
                 <input type="text" id="imageUrl" name="imgURL" class="input-source-url">
                 <button id="loadpic">Get</button>
                 <span>Or upload picture from local storage:</span>
-                <label class="load-file-label">Upload
+                <label class="upload-file-label">Upload
                     <input type="file" id="fromfile" name="files" accept="image/*" class="file-upload">
                 </label>
                 Select level:
