--- a/index.html
+++ b/index.html
@@ -13,35 +13,27 @@
 <body>
     <h1 class="title">Picpuzzle</h1>
     <section id="menu">
-        <img src="./assets/img/p2.jpg" alt="puzzle" id="previewpic" class="previewimage">
+        <img src="" alt="puzzle" id="previewpic" class="previewimage">
         <span>Select picture from collection:</span>
         <div class="collection">
-            <div class="prevPic"><span>&lt;</span></div>
-            <div class="collection-items-list">
+            <div id="prevPic"><span>&lt;</span></div>
+            <div class="collection-items-list" id="colil">
                 <ul id="items">
                     <li><img src="./assets/img/p1.jpg" alt="" class="collection-item"></li>
+                    <li><img src="./assets/img/p2.jpg" alt="" class="collection-item"></li>
+                    <li><img src="./assets/img/p3.jpg" alt="" class="collection-item"></li>
+                    <li><img src="./assets/img/p4.jpg" alt="" class="collection-item"></li>
+                    <li><img src="./assets/img/p5.jpg" alt="" class="collection-item"></li>
+                    <li><img src="./assets/img/p6.jpg" alt="" class="collection-item"></li>
                     <li><img src="./assets/img/p1.jpg" alt="" class="collection-item"></li>
-                    <li><img src="./assets/img/p1.jpg" alt="" class="collection-item"></li>
-                    <li><img src="./assets/img/p1.jpg" alt="" class="collection-item"></li>
-                    <li><img src="./assets/img/p1.jpg" alt="" class="collection-item"></li>
-                    <li><img src="./assets/img/p1.jpg" alt="" class="collection-item"></li>
-                    <li><img src="./assets/img/p1.jpg" alt="" class="collection-item"></li>
-                  
+                    <li><img src="./assets/img/p2.jpg" alt="" class="collection-item"></li>
+                    <li><img src="./assets/img/p3.jpg" alt="" class="collection-item"></li>
+                    <li><img src="./assets/img/p4.jpg" alt="" class="collection-item"></li>
+                    <li><img src="./assets/img/p5.jpg" alt="" class="collection-item"></li>
+                    <li><img src="./assets/img/p6.jpg" alt="" class="collection-item"></li>
                 </ul>
-                <!-- <img src="./assets/img/p1.jpg" alt="" class="collection-item">
-                <img src="./assets/img/p1.jpg" alt="" class="collection-item">
-                <img src="./assets/img/p1.jpg" alt="" class="collection-item">
-                <img src="./assets/img/p1.jpg" alt="" class="collection-item">
-                <img src="./assets/img/p1.jpg" alt="" class="collection-item">
-                <img src="./assets/img/p1.jpg" alt="" class="collection-item">
-                <img src="./assets/img/p1.jpg" alt="" class="collection-item">
-                <img src="./assets/img/p1.jpg" alt="" class="collection-item">
-                <img src="./assets/img/p1.jpg" alt="" class="collection-item">
-                <img src="./assets/img/p1.jpg" alt="" class="collection-item">
-                <img src="./assets/img/p1.jpg" alt="" class="collection-item">
-                <img src="./assets/img/p1.jpg" alt="" class="collection-item"> -->
             </div>
-            <div class="nextPic"><span>&gt;</span></div>
+            <div id="nextPic"><span>&gt;</span></div>
         </div>
         <div class="content">
             <div class="game_settings">
@@ -49,7 +41,7 @@
                 <input type="text" id="imageUrl" name="imgURL" class="input-source-url">
                 <button id="loadpic">Get</button>
                 <span>Or upload picture from local storage:</span>
-                <label class="upload-file-label">Upload
+                <label class="btn btn-primary upldbtn">Upload 
                     <input type="file" id="fromfile" name="files" accept="image/*" class="file-upload">
                 </label>
                 Select level:
@@ -65,7 +57,7 @@
                 <label>
                     <input type="radio" value="6" name="complexity">6
                 </label>
-                <button id="startgame" class="btn btn-primary disabled start_button" disabled>Start game!</button>
+                <button id="startgame" class="btn btn-success disabled start_button" disabled>Start game!</button>
             </div>
         </div>
     </section>
