collection finger scrolling

--- a/index.html
+++ b/index.html
@@ -62,6 +62,7 @@
         </div>
     </section>
     <section id="game" style="display: none;">
+    	<button class="btn btn-primary to_res_btn" id="toResultsBtn">To Results</button>
     </section>
     <section id="results" sytle="display: none;">
     </section>
