testing on smartphone

--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
     	<h3>You've made</h3>
     	<h1 id="swapnumber" class="swnum"></h1>
     	<h3>swaps</h3>
-    	<h4 id="conclusion"></h4>
+    	<h4 id="conclusion" class="concl"></h4>
     	<button class="btn btn-primary" id="againBtn">AGAIN!</button>
     </section>
     <script src="./assets/js/picpuzzle.js"></script>
