before refactoring and optimization

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body>
     <h1 class="title">Picbuzzle</h1>
     <section id="menu">
-        <img src="" alt="puzzle" id="previewpic" class="previewimage">
+        <img src="" alt="puzzle" id="previewpic" class="previewimage borderedpi">
         <span>Select picture from collection:</span>
         <div class="collection">
             <div id="prevPic"><span>&lt;</span></div>
@@ -37,7 +37,7 @@
         <div class="content">
             <div class="game_settings">
                 <span>Or get it by URL:</span>
-                <input type="text" id="imageUrl" name="imgURL" class="input-source-url">
+                <input type="text" id="imageUrl" name="imgURL" class="input-source-url" placeholder="Paste your URL here">
                 <button id="loadpic">Get</button>
                 <span>Or upload picture from local storage:</span>
                 <label class="btn btn-primary upldbtn">Upload 
