--- a/index.html
+++ b/index.html
@@ -13,23 +13,23 @@
 <body>
     <h1 class="title">Picbuzzle</h1>
     <section id="menu">
-        <img src="" alt="puzzle" id="previewpic" class="previewimage borderedpi">
+        <img src="./assets/img/p11.jpg" alt="puzzle" id="previewpic" class="previewimage borderedpi">
         <span>Select picture from collection:</span>
         <div class="collection">
             <div id="prevPic"><span>&lt;</span></div>
             <div class="collection-items-list" id="colil">
                 <ul id="items">
-                    <li><img src="./assets/img/p1.jpg" alt="" class="collection-item"></li>
-                    <li><img src="./assets/img/p2.jpg" alt="" class="collection-item"></li>
-                    <li><img src="./assets/img/p3.jpg" alt="" class="collection-item"></li>
-                    <li><img src="./assets/img/p4.jpg" alt="" class="collection-item"></li>
-                    <li><img src="./assets/img/p5.jpg" alt="" class="collection-item"></li>
-                    <li><img src="./assets/img/p6.jpg" alt="" class="collection-item"></li>
-                    <li><img src="./assets/img/p7.jpg" alt="" class="collection-item"></li>
-                    <li><img src="./assets/img/p8.jpg" alt="" class="collection-item"></li>
-                    <li><img src="./assets/img/p9.jpg" alt="" class="collection-item"></li>
-                    <li><img src="./assets/img/p10.jpg" alt="" class="collection-item"></li>
-                    <li><img src="./assets/img/p11.jpg" alt="" class="collection-item"></li>
+                    <li class="collection-item"><img src="./assets/img/p1.jpg" alt="" /></li>
+                    <li class="collection-item"><img src="./assets/img/p2.jpg" alt="" /></li>
+                    <li class="collection-item"><img src="./assets/img/p3.jpg" alt="" /></li>
+                    <li class="collection-item"><img src="./assets/img/p4.jpg" alt="" /></li>
+                    <li class="collection-item"><img src="./assets/img/p5.jpg" alt="" /></li>
+                    <li class="collection-item"><img src="./assets/img/p6.jpg" alt="" /></li>
+                    <li class="collection-item"><img src="./assets/img/p7.jpg" alt="" /></li>
+                    <li class="collection-item"><img src="./assets/img/p8.jpg" alt="" /></li>
+                    <li class="collection-item"><img src="./assets/img/p9.jpg" alt="" /></li>
+                    <li class="collection-item"><img src="./assets/img/p10.jpg" alt="" /></li>
+                    <li class="collection-item"><img src="./assets/img/p11.jpg" alt="" /></li>
                 </ul>
             </div>
             <div id="nextPic"><span>&gt;</span></div>
