--- a/index.html
+++ b/index.html
@@ -13,13 +13,13 @@
 <body>
     <h1 class="title">Picbuzzle</h1>
     <section id="menu">
-        <img src="./assets/img/p11.jpg" alt="puzzle" id="previewpic" class="previewimage borderedpi">
+        <img src="" alt="puzzle" id="previewpic" class="previewimage borderedpi">
         <span>Select picture from collection:</span>
         <div class="collection">
             <div id="prevPic"><span>&lt;</span></div>
             <div class="collection-items-list" id="colil">
                 <ul id="items">
-                    <li class="collection-item"><img src="./assets/img/p1.jpg" alt="" /></li>
+                    <li class="collection-item"><img src="./assets/img/p1.png" alt="" class="selected-item"/></li>
                     <li class="collection-item"><img src="./assets/img/p2.jpg" alt="" /></li>
                     <li class="collection-item"><img src="./assets/img/p3.jpg" alt="" /></li>
                     <li class="collection-item"><img src="./assets/img/p4.jpg" alt="" /></li>
@@ -61,10 +61,11 @@
         </div>
     </section>
     <section id="game" style="display: none;">
-    	<button class="btn btn-primary to_res_btn" id="toResultsBtn">To Results</button>
+    	<button class="btn btn-primary to_res_btn" id="toResultsBtn">Rage Quit</button>
     </section>
     <section id="results" style="display: none;">
     	<img id="resultImage" alt="Result image" src="" class="previewimage"/>
+    	<h1 id="result_title"></h1>
     	<h3>You've made</h3>
     	<h1 id="swapnumber" class="swnum"></h1>
     	<h3>swaps</h3>
