--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             <div id="prevPic"><span>&lt;</span></div>
             <div class="collection-items-list" id="colil">
                 <ul id="items">
-                    <li class="collection-item"><img src="./assets/img/p1.png" alt="" class="selected-item"/></li>
+                    <li class="collection-item"><img src="./assets/img/p1.png" alt="" class="selected-item" /></li>
                     <li class="collection-item"><img src="./assets/img/p2.jpg" alt="" /></li>
                     <li class="collection-item"><img src="./assets/img/p3.jpg" alt="" /></li>
                     <li class="collection-item"><img src="./assets/img/p4.jpg" alt="" /></li>
@@ -40,7 +40,7 @@
                 <input type="text" id="imageUrl" name="imgURL" class="input-source-url" placeholder="Paste your URL here">
                 <button id="loadpic">Get</button>
                 <span>Or upload picture from local storage:</span>
-                <label class="btn btn-primary upldbtn">Upload 
+                <label class="btn btn-primary upldbtn">Upload
                     <input type="file" id="fromfile" name="files" accept="image/*" class="file-upload">
                 </label>
                 Select level:
@@ -60,17 +60,20 @@
             </div>
         </div>
     </section>
-    <section id="game" style="display: none;">
-    	<button class="btn btn-primary to_res_btn" id="toResultsBtn">Rage Quit</button>
+    <section id="game">
+        <div id="gb" class="game-buttons">
+            <button class="btn btn-primary" id="reshuffleButton">Reshuffle</button>
+            <button class="btn btn-danger to_res_btn" id="toResultsBtn">Rage Quit</button>
+        </div>
     </section>
-    <section id="results" style="display: none;">
-    	<img id="resultImage" alt="Result image" src="" class="previewimage"/>
-    	<h1 id="result_title"></h1>
-    	<h3>You've made</h3>
-    	<h1 id="swapnumber" class="swnum"></h1>
-    	<h3>swaps</h3>
-    	<h4 id="conclusion" class="concl"></h4>
-    	<button class="btn btn-primary" id="againBtn">AGAIN!</button>
+    <section id="results">
+        <img id="resultImage" alt="Result image" src="" class="previewimage" />
+        <h1 id="result_title"></h1>
+        <h3>You've made</h3>
+        <h1 id="swapnumber" class="swnum"></h1>
+        <h3>swaps</h3>
+        <h4 id="conclusion" class="concl"></h4>
+        <button class="btn btn-primary" id="tryAgainButton">AGAIN!</button>
     </section>
     <script src="./assets/js/picpuzzle.js"></script>
     <script src="./assets/js/main.js"></script>
