--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body>
     <h1 class="title">Picbuzzle</h1>
     <section id="menu">
-        <img src="" alt="puzzle" id="previewpic" class="previewimage borderedpi">
+        <img src="" alt="Previev picture must be here" id="previewpic" class="previewimage borderedpi">
         <span>Select picture from collection:</span>
         <div class="collection">
             <div id="prevPic"><span>&lt;</span></div>
@@ -65,6 +65,7 @@
             <button class="btn btn-primary" id="reshuffleButton">Reshuffle</button>
             <button class="btn btn-danger to_res_btn" id="toResultsBtn">Rage Quit</button>
         </div>
+        <h6>*If you see only white screen try to slide it in different directions</h6>
     </section>
     <section id="results">
         <img id="resultImage" alt="Result image" src="" class="previewimage" />
