--- a/index.html
+++ b/index.html
@@ -15,16 +15,16 @@
     <section id="menu">
         <img src="" alt="Preview picture must be here" id="previewPicture" class="previewimage bordered">
         <div id="imageLoadingFail" style="display: none;">
-        	<h1>Sorry!</h1>
-        	<h3>I couldn&apos;t load your image.</h3>
-        	<h3>Try again or use another method.</h3>
+            <h1>Sorry!</h1>
+            <h3>I couldn&apos;t load your image.</h3>
+            <h3>Try again or use another method.</h3>
         </div>
         <span>Select picture from collection:</span>
         <div class="collection-wrapper">
             <div id="previousPictureButton"><span>&lt;</span></div>
             <div class="collection-items-list" id="collectionItemsList">
                 <ul id="items">
-                    <li class="collection-item"><img src="./assets/img/p1.png" alt=""/></li>
+                    <li class="collection-item"><img src="./assets/img/p1.png" alt="" /></li>
                     <li class="collection-item"><img src="./assets/img/p2.jpg" alt="" /></li>
                     <li class="collection-item"><img src="./assets/img/p11.jpg" alt="" /></li>
                     <li class="collection-item"><img src="./assets/img/p3.jpg" alt="" /></li>
@@ -68,6 +68,8 @@
         </div>
     </section>
     <section id="game">
+    	<div id="helpbox" class="big-help"><img alt="Help picture" src="" id="helpPicture"/></div>
+    	<div id="helplabel" class="small-help"><img src="./assets/img/help-image.png" /></div>
         <div id="game-buttons" class="game-buttons-container">
             <button class="btn btn-primary" id="reshuffleButton">Reshuffle</button>
             <button class="btn btn-danger" id="rageQuitButton">Rage Quit</button>
