fixed some bugs

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <h1 class="title">Picbuzzle</h1>
     <section id="menu">
         <img src="" alt="Preview picture must be here" id="previewPicture" class="previewimage bordered">
-        <div id="imageLoadingFail" style="display: none;">
+        <div id="imageLoadingFail" style="display: none;" class="image-loading-error">
             <h1>Sorry!</h1>
             <h3>I couldn&apos;t load your image.</h3>
             <h3>Try again or use another method.</h3>
