minified js and css

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <title>Picbuzzle</title>
     <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" rel="stylesheet" integrity="sha256-7s5uDGW3AHqw6xtJmNNtr+OBRJUlgkNJEo78P4b0yRw= sha512-nNo+yCHEyn0smMxSswnf/OnX6/KwJuZTlNZBjauKhTK0c+zT+q5JOCx0UFhXQ6rJR9jg6Es8gPuD2uZcYDLqSw==" crossorigin="anonymous">
-    <link rel="stylesheet" href="./assets/styles/main.css">
+    <link rel="stylesheet" href="./assets/styles/main.min.css">
     <link rel="icon" type="image/png" href="favicon.png">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
 </head>
@@ -86,8 +86,8 @@
         <h4 id="conclusion" class="conclusion-phrase"></h4>
         <button class="btn btn-primary" id="tryAgainButton">AGAIN!</button>
     </section>
-    <script src="./assets/js/picpuzzle.js"></script>
-    <script src="./assets/js/main.js"></script>
+    <script src="./assets/js/picpuzzle.min.js"></script>
+    <script src="./assets/js/main.min.js"></script>
 </body>
 
 </html>
